--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
   <div class="jumbotron">
       <div class="col-sm-8 mx-auto">
           <h1>Welcome </h1>
-          <p style="color: black;"><b> Welcome to The BEST Retail Bank TO EVER EXIST! Retail bank serves individual customers, to manage their savings and current accounts. It has the ability to create customer, open customer account, update and delete customer, manage cashier transactions such as deposit, withdraw and transfer functionalities.</b></p>
+          <p style="color: black;"><b> Welcome to The Retail Bank! Retail bank serves individual customers, to manage their savings and current accounts. It has the ability to create customer, open customer account, update and delete customer, manage cashier transactions such as deposit, withdraw and transfer functionalities.</b></p>
       </div>
   </div>
 </main>
